글 수정기능 작성

--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -28,10 +28,10 @@
             내용 : <textarea id="contents" name="contents" rows="30" cols="100" required>[[${article.contents}]]</textarea>
         </div>
         <div>
-            기존 비밀번호 : <input type="password" id="usedPwd" name="password" required>
+            기존 비밀번호 : <input type="password" id="usedPwd" name="usedPwd" required>
         </div>
         <div>
-            새로운 비밀번호 : <input type="password" id="newPwd" name="password" required>
+            새로운 비밀번호 : <input type="password" id="newPwd" name="newPwd" required>
         </div>
 
         <div>
