240111 글생성: 홈버튼 추가. 글생성 시 게시판 선택 오류 수정 / 게시판 : 전체게시판 및 개별게시판에 대한 요청을 한 컨트롤러로 들어가도록 수정 / 검색: 검색기능 추가. 전체게시판/개별게시판에서 제목/내용으로 검색 가능

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -2,17 +2,23 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
-    <title>board</title>
+    <title>Title</title>
 </head>
 <body>
 <h1>익명게시판</h1>
 <div>
     <form th:action="@{/boards/{id}/search(id = ${board})}" method="get">
         <select id="searchType" name="searchType">
-            <option value="title" name="title" id="title" selected="selected">제목</option>
-            <option value="contents" name="contents" id="contents">내용</option>
+            <th:div th:if="${#strings.equals(searchType, 'title')}">
+                <option value="title" name="title" selected="selected">제목</option>
+                <option value="contents" name="contents">내용</option>
+            </th:div>
+            <th:div th:unless="${#strings.equals(searchType, 'title')}">
+                <option value="title" name="title">제목</option>
+                <option value="contents" name="contents" selected="selected">내용</option>
+            </th:div>
         </select>
-        <input type="text" id="searchWord" name="searchWord" required>
+        <input type="text" id="searchWord" name="searchWord" th:value="${searchWord}">
         <input type="submit" value="검색">
     </form>
 </div>
@@ -23,16 +29,11 @@
     <a th:href="@{/boards/{id}(id=3)}">일상 게시판</a> |
     <a th:href="@{/boards/{id}(id=4)}">사건사고 게시판</a>
 </p>
-
 <div th:if="${articleList.isEmpty()}">
-    <p>글이 없습니다.</p>
+    <p>검색 결과가 없습니다.</p>
 </div>
-
-<!--board에 따라 보여주는 글이 다르도록 구현-->
 <div th:unless="${articleList.isEmpty()}" th:each="article: ${articleList}">
     <p>[[${article.id}]] <a th:href="@{/article/{id}(id=${article.id})}">[[${article.title}]] [[${article.contents}]]</a></p>
 </div>
-</div>
-<a href="/boards/create-view">글쓰기</a>
 </body>
 </html>
