--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -9,16 +9,31 @@
     <form th:action="@{/article/{id}/update(id=${article.id})}" method="post">
         <div>
             <select name="board" id="board" required>
-                <th:div th:switch="${article.board}">
-                    <option th:case="1" value="1">기존게시판 : 자유</option>
-                    <option th:case="2" value="2">기존게시판 : 개발</option>
-                    <option th:case="3" value="3">기존게시판 : 일상</option>
-                    <option th:case="4" value="4">기존게시판 : 사건사고</option>
+                <th:div th:if="${article.board==1}">
+                    <option value="1" selected="selected">자유</option>
+                    <option value="2">개발</option>
+                    <option value="3">일상</option>
+                    <option value="4">사건사고</option>
                 </th:div>
-                <option value="1">자유</option>
-                <option value="2">개발</option>
-                <option value="3">일상</option>
-                <option value="4">사건사고</option>
+                <th:div th:if="${article.board==2}">
+                    <option value="1">자유</option>
+                    <option value="2"  selected="selected">개발</option>
+                    <option value="3">일상</option>
+                    <option value="4">사건사고</option>
+                </th:div>
+                <th:div th:if="${article.board==3}">
+                    <option value="1">자유</option>
+                    <option value="2">개발</option>
+                    <option value="3" selected="selected">일상</option>
+                    <option value="4">사건사고</option>
+                </th:div>
+                <th:div th:if="${article.board==4}">
+                    <option value="1">자유</option>
+                    <option value="2">개발</option>
+                    <option value="3">일상</option>
+                    <option value="4" selected="selected">사건사고</option>
+                </th:div>
+
             </select>
         </div>
         <div>
