--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -55,6 +55,6 @@
 
     </form>
 <a th:href="@{/article/{id}(id=${article.id})}">뒤로가기</a>
-<a href="/boards">홈으로</a>
+<a href="/boards/0">홈으로</a>
 </body>
 </html>
